# advent-of-code2023

./: .gitignore  readme.md
01-trebuchet/: tags  trebuchet.cabal  trebuchet.py
03-gear-ratios/: x3-gear-rations.cabal
04-scratchcards/: x4-scratchcards.cabal
04-scratchcards/app/: Main.hs
05-fertilizer/: x5-fertilizer.cabal
06-wait-for-it/: main.py  x6-wait-for-it.cabal
06-wait-for-it/app/: Main.hs
07-camel-cards/: main.py  x7-camel-cards.cabal
08-haunted-wasteland/: main.py  x8-haunted-wasteland.cabal
09-mirage-maintenance/: .ghci  main.py
1-trebuchet/: CHANGELOG.md
1-trebuchet/app/: Main.hs
10-pipe-maze/: processed-input.txt  x10-pipe-maze.cabal
10-pipe-maze/app/: Main.hs
11-cosmic-expansion/: main.py  x11-cosmic-expansion.cabal
11-cosmic-expansion/app/: Main.hs
12-hot-springs/: main.py  x12-hot-springs.cabal
12-hot-springs/app/: Main.hs
13-point-of-incidence/: x13-point-of-incidence.cabal
13-point-of-incidence/app/: Main.hs
14-parabolic-reflector-dish/: main.py  x14-parabolic-reflector-dish.cabal
14-parabolic-reflector-dish/app/: Main.hs
15-lens-library/: x15-lens-library.cabal
15-lens-library/app/: Main.hs
16-the-floor-will-be-lava/: x16-the-floor-will-be-lava.cabal
16-the-floor-will-be-lava/app/: Main.hs
17-clumsy-crucible/: dijkstra.cabal
17-clumsy-crucible/app/: Main.hs
18-lavaduct-lagoon/: x18-lavaduct-lagoon.cabal
18-lavaduct-lagoon/app/: Main.hs
19-aplenty/: x19-aplenty.cabal
19-aplenty/app/: Main.hs  Part1.hs  Part2.hs
2-cube-conudrum/: CHANGELOG.md  main.py  x2-cube-conudrum.cabal
2-cube-conudrum/app/: Main.hs
3-gear-rations/: CHANGELOG.md  LICENSE  main.py
3-gear-rations/app/: Main.hs
4-scratchcards/: CHANGELOG.md  main.py  x4-scratchcards.cabal
4-scratchcards/app/: Main.hs
5-fertilizer/app/: Main.hs
7-camel-cards/app/: Main.hs
8-haunted-wasteland/app/: Main.hs
9-mirage-maintenance/: x9-mirage-maintenance.cabal
9-mirage-maintenance/app/: Main.hs
