cabal-version:   3.0
name:            x3-gear-rations
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Futar
maintainer:      Futarimiti@163.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable x3-gear-rations
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0, safe
    hs-source-dirs:   app
    default-language: GHC2021
