cabal-version:   3.0
name:            x7-camel-cards
version:         0.1.0.0
license:         NONE
author:          Futar
maintainer:      Futarimiti@163.com
build-type:      Simple
extra-doc-files: none

common warnings
    ghc-options: -Wall

executable x7-camel-cards
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: GHC2021
